# GameX

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
.github/workflows/: build&test.yml
src/GameBall/: CMakeLists.txt  main.cpp
src/GameBall/core/: actor.cpp  actor.h  asset_manager.cpp  asset_manager.h  camera_third_person.cpp  camera_third_person.h  game_ball.cpp  game_ball.h  particle.cpp  particle.h  utils.cpp  utils.h
src/GameBall/core/actors/: actors.h  common_ball_actor.cpp  common_ball_actor.h  common_block_actor.cpp  common_block_actor.h
src/GameBall/core/particles/: particles.h
src/GameBall/logic/: events.cpp  events.h  logic.cpp  logic.h  object.cpp  object.h  obstacle.cpp  obstacle.h  player.cpp  player.h  player_input.cpp  player_input.h  unit.cpp  unit.h  world.cpp  world.h
src/GameBall/logic/obstacles/: block.cpp  block.h  obstacles.h
src/GameBall/logic/units/: regular_ball.cpp  regular_ball.h  units.h
src/GameBall/main/: game_ball.cpp  game_ball.h  world.cpp  world.h
src/GameBall/utils/: utils.cpp
src/GameX/: CMakeLists.txt  GameX.cpp  GameX.h  main.cpp
src/GameX/animation/: CMakeLists.txt  animation.cpp  animation.h  camera.cpp  camera.h  camera.inl  command_buffer.cpp  command_buffer.h  common.cpp  common.h  dynamic_object.cpp  dynamic_object.h  entity.cpp  entity.h  entity.inl  manager.cpp  manager.h  mesh.cpp  mesh.h  mesh.inl  model.cpp  model.h  object.cpp  object.h  scene.cpp  scene.h  scene.inl
src/GameX/animation/lights/: ambient_light.cpp  ambient_light.h  ambient_light.inl  directional_light.cpp  directional_light.h  directional_light.inl  lights.h
src/GameX/application/: CMakeLists.txt  application.cpp  application.h
src/GameX/core/: CMakeLists.txt  core.cpp  core.h  logic.cpp  logic.h  module.cpp  module.h  object.cpp  object.h  object_manager.cpp  object_manager.h
src/GameX/physics/: CMakeLists.txt  collision.cpp  collision.h  cube.cpp  cube.h  physics.cpp  physics.h  rigid_body.cpp  rigid_body.h  sphere.cpp  sphere.h  world.cpp  world.h
src/GameX/renderer/: CMakeLists.txt  asset_manager.cpp  asset_manager.h  camera.cpp  camera.h  entity.cpp  entity.h  geometry_buffer.cpp  geometry_buffer.h  image.cpp  image.h  light.cpp  light.h  model.cpp  model.h  model.inl  object.cpp  object.h  prop_film.cpp  prop_film.h  render_pipeline.cpp  render_pipeline.h  renderer.cpp  renderer.h  scene.cpp  scene.h  texture.cpp  texture.h  zbuffer.cpp  zbuffer.h
src/GameX/renderer/lights/: ambient_light.cpp  ambient_light.h  directional_light.cpp  directional_light.h  light_ambient.cpp  light_ambient.h  lights.h
src/GameX/renderer/programs/: geometry_buffer.cpp  geometry_buffer.h  geometry_pass.cpp  geometry_pass.h  lighting_pass.cpp  lighting_pass.h  programs.cpp  programs.h
src/GameX/shaders/: CMakeLists.txt  ambient_light.frag  depth_pass.vert  directional_light.frag  envmap_pass.frag  envmap_pass.vert  fullscreen_lighting_pass.vert  geometry_pass.frag  geometry_pass.vert  shaders.cpp  shaders.h
src/GameX/utils/: CMakeLists.txt  asset_manager.cpp  asset_manager.h  asset_probe.cpp  asset_probe.h  common.cpp  common.h  file.cpp  file.h  image.cpp  image.h  mesh.cpp  mesh.h  metronome.cpp  metronome.h  object.cpp  object.h  object_manager.cpp  object_manager.h  utils.cpp  utils.h  vertex.cpp  vertex.h
test/: CMakeLists.txt  regular_ball_test.cpp  rotation_matrix.cpp
